ignore application.properties

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+src/main/resources/application-local.properties
+src/main/resources/application.properties
+
+.env
